--- a/3 - Workbook - Feature Engineering.ipynb
+++ b/3 - Workbook - Feature Engineering.ipynb
@@ -42,7 +42,258 @@
     "%matplotlib inline\n",
     "\n",
     "import seaborn as sns \n",
-    "sns.set_style('darkgrid')\n"
+    "sns.set_style('darkgrid')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tx_price</th>\n",
+       "      <th>beds</th>\n",
+       "      <th>baths</th>\n",
+       "      <th>sqft</th>\n",
+       "      <th>year_built</th>\n",
+       "      <th>lot_size</th>\n",
+       "      <th>property_type</th>\n",
+       "      <th>exterior_walls</th>\n",
+       "      <th>roof</th>\n",
+       "      <th>basement</th>\n",
+       "      <th>restaurants</th>\n",
+       "      <th>groceries</th>\n",
+       "      <th>nightlife</th>\n",
+       "      <th>cafes</th>\n",
+       "      <th>shopping</th>\n",
+       "      <th>arts_entertainment</th>\n",
+       "      <th>beauty_spas</th>\n",
+       "      <th>active_life</th>\n",
+       "      <th>median_age</th>\n",
+       "      <th>married</th>\n",
+       "      <th>college_grad</th>\n",
+       "      <th>property_tax</th>\n",
+       "      <th>insurance</th>\n",
+       "      <th>median_school</th>\n",
+       "      <th>num_schools</th>\n",
+       "      <th>tx_year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>295850</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>584</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>107</td>\n",
+       "      <td>9</td>\n",
+       "      <td>30</td>\n",
+       "      <td>19</td>\n",
+       "      <td>89</td>\n",
+       "      <td>6</td>\n",
+       "      <td>47</td>\n",
+       "      <td>58</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>234.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>216500</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>612</td>\n",
+       "      <td>1965</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>105</td>\n",
+       "      <td>15</td>\n",
+       "      <td>6</td>\n",
+       "      <td>13</td>\n",
+       "      <td>87</td>\n",
+       "      <td>2</td>\n",
+       "      <td>26</td>\n",
+       "      <td>14</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>169.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>279900</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>615</td>\n",
+       "      <td>1963</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>183</td>\n",
+       "      <td>13</td>\n",
+       "      <td>31</td>\n",
+       "      <td>30</td>\n",
+       "      <td>101</td>\n",
+       "      <td>10</td>\n",
+       "      <td>74</td>\n",
+       "      <td>62</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>216.0</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>379900</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>618</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>33541.0</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>198</td>\n",
+       "      <td>9</td>\n",
+       "      <td>38</td>\n",
+       "      <td>25</td>\n",
+       "      <td>127</td>\n",
+       "      <td>11</td>\n",
+       "      <td>72</td>\n",
+       "      <td>83</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>265.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>340000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>634</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>149</td>\n",
+       "      <td>7</td>\n",
+       "      <td>22</td>\n",
+       "      <td>20</td>\n",
+       "      <td>83</td>\n",
+       "      <td>10</td>\n",
+       "      <td>50</td>\n",
+       "      <td>73</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2002</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   tx_price  beds  baths  sqft  year_built  lot_size property_type  \\\n",
+       "0    295850     1      1   584        2013       0.0       Missing   \n",
+       "1    216500     1      1   612        1965       0.0       Missing   \n",
+       "2    279900     1      1   615        1963       0.0       Missing   \n",
+       "3    379900     1      1   618        2000   33541.0       Missing   \n",
+       "4    340000     1      1   634        1992       0.0       Missing   \n",
+       "\n",
+       "  exterior_walls     roof  basement  restaurants  groceries  nightlife  cafes  \\\n",
+       "0        Missing  Missing       0.0          107          9         30     19   \n",
+       "1        Missing  Missing       1.0          105         15          6     13   \n",
+       "2        Missing  Missing       0.0          183         13         31     30   \n",
+       "3        Missing  Missing       0.0          198          9         38     25   \n",
+       "4        Missing  Missing       0.0          149          7         22     20   \n",
+       "\n",
+       "   shopping  arts_entertainment  beauty_spas  active_life  median_age  \\\n",
+       "0        89                   6           47           58        33.0   \n",
+       "1        87                   2           26           14        39.0   \n",
+       "2       101                  10           74           62        28.0   \n",
+       "3       127                  11           72           83        36.0   \n",
+       "4        83                  10           50           73        37.0   \n",
+       "\n",
+       "   married  college_grad  property_tax  insurance  median_school  num_schools  \\\n",
+       "0     65.0          84.0         234.0       81.0            9.0          3.0   \n",
+       "1     73.0          69.0         169.0       51.0            3.0          3.0   \n",
+       "2     15.0          86.0         216.0       74.0            8.0          3.0   \n",
+       "3     25.0          91.0         265.0       92.0            9.0          3.0   \n",
+       "4     20.0          75.0          88.0       30.0            9.0          3.0   \n",
+       "\n",
+       "   tx_year  \n",
+       "0     2013  \n",
+       "1     2006  \n",
+       "2     2012  \n",
+       "3     2005  \n",
+       "4     2002  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('cleaned_df.csv')\n",
+    "df.head()"
    ]
   },
   {
