--- a/2 - Workbook - Data Cleaning.ipynb
+++ b/2 - Workbook - Data Cleaning.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -284,19 +284,19 @@
        "4          75.0          88.0       30.0            9.0          3.0     2002  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfs = pd.read_csv('real_estate_data.csv')\n",
-    "dfs.head()"
+    "df = pd.read_csv('real_estate_data.csv')\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -305,14 +305,14 @@
        "(1883, 26)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# check shape\n",
-    "dfs.shape"
+    "df.shape"
    ]
   },
   {
@@ -330,8 +330,8 @@
    ],
    "source": [
     "# drop duplicates\n",
-    "dfs.drop_duplicates()\n",
-    "print(dfs.shape)"
+    "df.drop_duplicates()\n",
+    "print(df.shape)"
    ]
   },
   {
@@ -360,23 +360,23 @@
    "source": [
     "# basement feature seems to have a funny dataset, let's check them\n",
     "\n",
-    "dfs['basement'].unique()"
+    "df['basement'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# fill NaN values in basement features\n",
     "\n",
-    "dfs['basement'].fillna(0, inplace=True)"
+    "df['basement'].fillna(0, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -615,19 +615,19 @@
        "4          75.0          88.0       30.0            9.0          3.0     2002  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# check dataframe again\n",
-    "dfs.head()"
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -640,12 +640,12 @@
    ],
    "source": [
     "# let's reprint unique basement values\n",
-    "print(dfs['basement'].unique())"
+    "print(df['basement'].unique())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -660,27 +660,27 @@
     }
    ],
    "source": [
-    "sns.countplot(y='roof', data=dfs)\n",
+    "sns.countplot(y='roof', data=df)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# replace spelling typos\n",
-    "dfs['roof'].replace('composition', 'Composition', inplace=True)\n",
+    "df['roof'].replace('composition', 'Composition', inplace=True)\n",
     "\n",
-    "dfs['roof'].replace('asphalt', 'Asphalt', inplace=True)\n",
+    "df['roof'].replace('asphalt', 'Asphalt', inplace=True)\n",
     "\n",
-    "dfs['roof'].replace(['shake-shingle', 'asphalt,shake-shingle'], 'Shake Shingle', inplace=True)"
+    "df['roof'].replace(['shake-shingle', 'asphalt,shake-shingle'], 'Shake Shingle', inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -1091,18 +1091,18 @@
        "9          83.0         147.0       51.0            6.0          3.0     2007  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfs.head(10)"
+    "df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1118,13 +1118,13 @@
    ],
    "source": [
     "# let's see our plot again\n",
-    "sns.countplot(y='roof', data=dfs)\n",
+    "sns.countplot(y='roof', data=df)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1140,7 +1140,7 @@
    ],
    "source": [
     "# check for mislabeled classes\n",
-    "sns.countplot(y='exterior_walls', data=dfs)\n",
+    "sns.countplot(y='exterior_walls', data=df)\n",
     "plt.show()"
    ]
   },
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1178,13 +1178,13 @@
    "source": [
     "# checking for outliers using boxplot\n",
     "\n",
-    "sns.boxplot(dfs.tx_price)\n",
+    "sns.boxplot(df.tx_price)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1227,12 +1227,12 @@
    "source": [
     "# checking for outliers using seanborn violin plot (Recommended ) and boxplot together\n",
     "\n",
-    "sns.boxplot(dfs.tx_price)\n",
+    "sns.boxplot(df.tx_price)\n",
     "plt.xlim(0, 1000000) # making the x-axis consistent\n",
     "plt.show()\n",
     "\n",
     "\n",
-    "sns.violinplot('tx_price', data=dfs)\n",
+    "sns.violinplot('tx_price', data=df)\n",
     "plt.xlim(0, 1000000)\n",
     "plt.show()"
    ]
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1258,7 +1258,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1268,7 +1268,7 @@
     "# Display number of missing values by feature (categorical)\n",
     "\n",
     "# select a subset of our DataFrame of only our categorical features\n",
-    "selected = dfs.select_dtypes(include=['object'])\n",
+    "selected = df.select_dtypes(include=['object'])\n",
     "\n",
     "# Flag all the missing values\n",
     "check = selected.isnull()\n",
@@ -1279,18 +1279,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# fill exterior_walls missng values with missing\n",
     "\n",
-    "dfs['exterior_walls'].fillna('Missing', inplace=True)\n"
+    "df['exterior_walls'].fillna('Missing', inplace=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1302,7 +1302,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1310,12 +1310,12 @@
    "source": [
     "# let's check again\n",
     "\n",
-    "dfs.select_dtypes(include=['object']).isnull().sum()"
+    "df.select_dtypes(include=['object']).isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1347,7 +1347,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1355,7 +1355,7 @@
    "source": [
     "# Let's find and count the missing numerical feature\n",
     "\n",
-    "dfs.select_dtypes(exclude=['object']).isnull().sum()"
+    "df.select_dtypes(exclude=['object']).isnull().sum()"
    ]
   },
   {
@@ -1402,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1411,13 +1411,13 @@
        "array([0., 1.])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfs['basement'].unique()"
+    "df['basement'].unique()"
    ]
   },
   {
@@ -1439,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1454,7 +1454,7 @@
     }
    ],
    "source": [
-    "sns.countplot(y='roof', data=dfs)\n",
+    "sns.countplot(y='roof', data=df)\n",
     "plt.show()"
    ]
   },
@@ -1484,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1499,7 +1499,7 @@
     }
    ],
    "source": [
-    "sns.countplot(y='exterior_walls', data=dfs)\n",
+    "sns.countplot(y='exterior_walls', data=df)\n",
     "plt.show()"
    ]
   },
@@ -1532,11 +1532,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfs['exterior_walls'].replace('Rock, Stone', 'Masonry', inplace=True)\n"
+    "df['exterior_walls'].replace('Rock, Stone', 'Masonry', inplace=True)\n"
    ]
   },
   {
@@ -1549,11 +1549,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfs['exterior_walls'].replace(['Concrete', 'Block'], 'Concrete Block', inplace=True)\n",
+    "df['exterior_walls'].replace(['Concrete', 'Block'], 'Concrete Block', inplace=True)\n",
     "#dfs['exterior_walls'].replace('Block', 'Concrete Block', inplace=True)"
    ]
   },
@@ -1566,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1581,7 +1581,7 @@
     }
    ],
    "source": [
-    "sns.countplot(y='exterior_walls', data=dfs)\n",
+    "sns.countplot(y='exterior_walls', data=df)\n",
     "plt.show()"
    ]
   },
@@ -1605,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1620,9 +1620,13 @@
     }
    ],
    "source": [
-    "features = dfs.dtypes\n",
+    "features = df.dtypes\n",
     "mask = features == 'object'\n",
-    "print(features[mask])"
+    "print(features[mask])\n",
+    "\n",
+    "\n",
+    "# another approach\n",
+    "# df.dtypes[df.dtypes == 'object']"
    ]
   },
   {
@@ -1648,7 +1652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1664,7 +1668,7 @@
    ],
    "source": [
     "\n",
-    "sns.countplot(y='property_type', data=dfs)\n",
+    "sns.countplot(y='property_type', data=df)\n",
     "plt.show()"
    ]
   },
@@ -1689,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1749,19 +1753,19 @@
    ],
    "source": [
     "# Violin plot of beds\n",
-    "sns.violinplot('beds', data=dfs)\n",
+    "sns.violinplot('beds', data=df)\n",
     "# plt.xlim(0, 1000000)\n",
     "plt.show()\n",
     "\n",
     "\n",
     "# Violin plot of sqft\n",
-    "sns.violinplot('sqft', data=dfs)\n",
+    "sns.violinplot('sqft', data=df)\n",
     "# plt.xlim(0, 1000000)\n",
     "plt.show()\n",
     "\n",
     "# Violin plot of lot_size\n",
     "\n",
-    "sns.violinplot('lot_size', data=dfs)\n",
+    "sns.violinplot('lot_size', data=df)\n",
     "# plt.xlim(0, 1000000)\n",
     "plt.show()"
    ]
@@ -1787,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1801,13 +1805,13 @@
        "Name: lot_size, dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfs.lot_size.sort_values(ascending=False).head()"
+    "df.lot_size.sort_values(ascending=False).head()"
    ]
   },
   {
@@ -1840,7 +1844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1943,7 +1947,7 @@
        "102            6.0          3.0     2014  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1952,7 +1956,8 @@
     "#df.iloc[[102]]\n",
     "\n",
     "# dfs[102:103]\n",
-    "dfs[dfs.lot_size == dfs.lot_size.max()]"
+    "\n",
+    "df[df.lot_size == df.lot_size.max()]"
    ]
   },
   {
@@ -2044,7 +2049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2098,13 +2103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for column in dfs.select_dtypes(include=['object']):\n",
-    "    if dfs[column].empty or dfs[column].isnull:\n",
-    "        dfs[column] = 'Missing'"
+    "#for column in dfs.select_dtypes(include=['object']):\n",
+    "#    if dfs[column].empty or dfs[column].isnull:\n",
+    "#        dfs[column] = 'Missing'\n",
+    "        \n",
+    "        \n",
+    "for column in df.select_dtypes(include=['object']):\n",
+    "    df[column].fillna('Missing', inplace=True)"
    ]
   },
   {
@@ -2116,7 +2125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2128,13 +2137,13 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfs.select_dtypes(include=['object']).isnull().sum()"
+    "df.select_dtypes(include=['object']).isnull().sum()"
    ]
   },
   {
@@ -2159,7 +2168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2191,13 +2200,13 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfs.select_dtypes(exclude=['object']).isnull().sum()"
+    "df.select_dtypes(exclude=['object']).isnull().sum()"
    ]
   },
   {
@@ -2246,11 +2255,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfs.to_csv('cleaned_df.csv', index=None)"
+    "df.to_csv('cleaned_df.csv', index=None)"
    ]
   },
   {
